Fixing z-index problem with navbar and material buttons

--- a/assets/_sass/components/_nav.scss
+++ b/assets/_sass/components/_nav.scss
@@ -2,6 +2,7 @@
   font-weight: 500;
   font-size: 1.1em;
   margin: 0;
+  z-index: 10;
 }
 .navbar-brand {
   font-size: 1.1em;
