--- a/assets/_sass/components/components.scss
+++ b/assets/_sass/components/components.scss
@@ -1,3 +1,3 @@
 .button-more {
-  margin : 50px 0 ;
+  margin-top : 50px ;
 }
